<resources>
    <string name="app_name">PDDriver</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_drivercode">Enter Driver Code</string>
    <string name="action_sign_in">Login</string>
    <string name="action_submit">Submit</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="incorrect_drive_code">Driver code is invalid</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="booking_date">BOOKING DATE : </string>
    <string name="booking_no">BOOKING NO : </string>
    <string name="booking_from">ADDRESS : </string>
    <string name="booking_from_pub">PICKUP VENUE : </string>
    <string name="brn_start_drive">START DRIVE</string>
    <string name="booking_travel_time">TRAVEL TIME : </string>
    <string name="booking_start_time">START TIME : </string>
    <string name="booking_end_time">END TIME :</string>
    <string name="booking_total_travel_time">TOTAL TRAVEL TIME :</string>


</resources>
