<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
android:layout_height="wrap_content" android:gravity="center_vertical|center_horizontal"
android:orientation="vertical" android:paddingBottom="5dp"
android:paddingLeft="10dp"
android:paddingRight="10dp"
android:paddingTop="5dp" tools:context="com.oceanstyxx.pddriver.activity.MainActivity"
android:descendantFocusability="beforeDescendants"
android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Now there is no drive request for you."
            android:id="@+id/textView2"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#000000" />


    </LinearLayout>


        <Button
            android:id="@+id/btnAction"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@color/colorButton1"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorWhite"
            />

    <RelativeLayout
        android:id="@+id/ll2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border"
        >

        <TextView
            android:id="@+id/bookingNumberTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:text="@string/booking_no"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:paddingLeft="5dp"
            />

        <TextView
            android:id="@+id/bookingNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_toRightOf="@+id/bookingNumberTitle"
            android:textSize="15sp"
            android:paddingLeft="8dp"
            />

        <TextView
            android:id="@+id/bookingDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:text="@string/booking_date"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/bookingNumberTitle"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            />

        <TextView
            android:id="@+id/bookingDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:layout_toRightOf="@+id/bookingDateTitle"
            android:layout_below="@+id/bookingNumber"
            android:paddingTop="10dp"
            android:paddingLeft="8dp"
            />

        <TextView
            android:id="@+id/bookingFromPubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/booking_from_pub"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/bookingDateTitle"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            />

        <TextView
            android:id="@+id/bookingFromPub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_toRightOf="@+id/bookingFromPubTitle"
            android:layout_below="@+id/bookingDate"
            android:textSize="15sp"
            android:paddingLeft="8dp"
            android:paddingTop="10dp"
            />

        <TextView
            android:id="@+id/bookingFromTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/booking_from"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/bookingFromPubTitle"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            />

        <TextView
            android:id="@+id/bookingFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_toRightOf="@+id/bookingFromTitle"
            android:layout_below="@+id/bookingFromPub"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp"
        android:background="@drawable/border"
        >
        <TextView
            android:id="@+id/bookingTravelTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:text="@string/booking_travel_time"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/bookingTravelTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_toRightOf="@+id/bookingTravelTimeTitle"
            android:textSize="15sp"
            android:paddingLeft="8dp"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/bookingStartTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:text="@string/booking_start_time"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/bookingTravelTimeTitle"
            android:visibility="gone"
            android:paddingTop="10dp"
            />

        <TextView
            android:id="@+id/bookingStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_toRightOf="@+id/bookingStartTimeTitle"
            android:layout_below="@+id/bookingTravelTimeTitle"
            android:textSize="15sp"
            android:paddingLeft="8dp"
            android:visibility="gone"
            android:paddingTop="10dp"
            />

        <TextView
            android:id="@+id/bookingEndTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:text="@string/booking_end_time"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/bookingStartTimeTitle"
            android:visibility="gone"
            android:paddingTop="10dp"
            />

        <TextView
            android:id="@+id/bookingEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_toRightOf="@+id/bookingEndTimeTitle"
            android:layout_below="@+id/bookingStartTime"
            android:textSize="15sp"
            android:paddingLeft="8dp"
            android:visibility="gone"
            android:paddingTop="10dp"
            />

        <TextView
            android:id="@+id/bookingTotalTravelTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:text="@string/booking_total_travel_time"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/bookingEndTimeTitle"
            android:paddingTop="10dp"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/bookingTotalTravelTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_toRightOf="@+id/bookingTotalTravelTimeTitle"
            android:layout_below="@+id/bookingEndTime"
            android:textSize="15sp"
            android:visibility="gone"
            android:paddingTop="10dp"
            android:paddingLeft="8dp"
            />

    </RelativeLayout>



        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:id="@+id/ll3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:visibility="gone"
                android:orientation="vertical"
                >
        <TableLayout
            android:id="@+id/tableInvoices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            >
        </TableLayout>
            </LinearLayout>
        </ScrollView>


    <RelativeLayout
        android:id="@+id/ll6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity = "bottom"
        >
    <TextView
        android:id="@+id/bookingTotalTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="23sp"
        android:paddingBottom="5dp"
        android:text="Total :"
        android:textStyle="bold"
        android:visibility="gone"
        android:paddingTop="10dp"
        />
        <TextView
            android:id="@+id/bookingTotal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="23sp"
            android:gravity="right"
            android:paddingBottom="5dp"
            android:textStyle="bold"
            android:visibility="gone"
            android:paddingTop="10dp"
            />
    </RelativeLayout>

    </LinearLayout>
